hphp/test/vm/impl_abstract_dv_io.php.expectf
HipHop Fatal error: Declaration of B::o() must be compatible with that of A::o() in %s on line 3
